# ossm

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.devcontainer/dev-patterns/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  create-release.yml  release.yml
.zed/: settings.json
apps/simulator/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vercel.json  vite.config.ts
apps/simulator/public/models/: ossm-alt.gltf
apps/simulator/scripts/: vercel-build.sh
apps/simulator/src/: App.tsx  AppearanceProvider.tsx  Scene.tsx  SimulatorProvider.tsx  main.tsx
apps/simulator/src/hooks/: useAppearance.ts  useEngineState.ts  useIsMobile.ts  usePersistedState.ts  useSimulator.ts
boards/ossm-alt/: Cargo.toml
boards/ossm-alt/src/: lib.rs  rs485.rs  transport.rs
boards/ossm-stock/: Cargo.toml
boards/ossm-stock/src/: lib.rs
boards/rs485/: Cargo.toml
boards/rs485/src/: lib.rs
boards/sim-board/: Cargo.toml
boards/sim-board/src/: lib.rs
boards/sim-m5cores3/: Cargo.toml
boards/sim-m5cores3/src/: display.rs  io_expander.rs  lib.rs  pmu.rs  renderer.rs
docs/: so-you-want-to-add-a-pattern.md
drivers/m57aim/: Cargo.toml
drivers/m57aim/src/: lib.rs  rs485.rs  stepdir.rs
drivers/sim-motor/: Cargo.toml
drivers/sim-motor/src/: lib.rs
examples/ossm-alt-m57aim/: Cargo.toml
examples/ossm-alt-m57aim/src/: main.rs
features/ossm-m5-remote/: Cargo.toml
features/ossm-m5-remote/src/: lib.rs
features/pattern-engine/: Cargo.toml
features/pattern-engine/src/: any_pattern.rs  any_pattern_macro.rs  engine.rs  input.rs  lib.rs  pattern.rs
features/pattern-engine/src/patterns/: deeper.rs  half_half.rs  mod.rs  none.rs  simple.rs  stop_n_go.rs  teasing_pounding.rs  torque.rs
firmware/ossm-alt/: Cargo.toml
firmware/ossm-alt-m57aim/: Cargo.toml
firmware/ossm-alt-m57aim/src/: main.rs
firmware/ossm-alt/src/: main.rs
firmware/ossm-stock/: Cargo.toml
firmware/ossm-stock/.cargo/: config.toml
firmware/ossm-stock/src/: main.rs
firmware/seeed-xiao/: Cargo.toml
firmware/seeed-xiao/src/: main.rs
firmware/sim-m5cores3/: Cargo.toml
firmware/sim-m5cores3/.cargo/: config.toml
firmware/sim-m5cores3/src/: main.rs
firmware/sim-wasm/: Cargo.toml
firmware/sim-wasm/src/: lib.rs
firmware/waveshare/: Cargo.toml
firmware/waveshare/src/: main.rs
lib/m57aim-motor/: Cargo.toml
lib/m57aim-motor/src/: lib.rs
lib/ossm-alt-board/: Cargo.toml
lib/ossm-alt-board/src/: lib.rs
lib/sossm/: Cargo.toml
lib/sossm/src/: lib.rs
ossm/: Cargo.toml
ossm/src/: board.rs  command.rs  lib.rs  limits.rs  logging.rs  mechanical.rs  motion.rs  motor.rs  stepdir.rs
ossm/src/motor/: mod.rs  rs485.rs  self_homing.rs  step_dir.rs
ossm/src/transport/: mod.rs  modbus.rs  modbus_rtu.rs  rs485.rs  step_dir.rs
sossm/: Cargo.toml
sossm/src/: board.rs  command.rs  lib.rs  limits.rs  mechanical.rs  motion.rs  motor.rs
src/boards/ossm-alt/: Cargo.toml
src/boards/ossm-alt/src/: lib.rs
src/lib/sossm/: Cargo.toml
src/lib/sossm/src/: board.rs  lib.rs  mechanical.rs  motor.rs
src/motors/m57aim/: Cargo.toml
src/motors/m57aim/src/: lib.rs
