[workspace]
resolver = "3"
members = ["ossm", "drivers/*", "boards/*", "features/*", "firmware/*"]

[profile.dev]
opt-level = "s"

[profile.release]
incremental = false
lto = 'fat'

[profile.release.package.ossm-alt]
codegen-units = 1
debug = 2
debug-assertions = false
opt-level = 's'
overflow-checks = false

[profile.release.package.waveshare]
codegen-units = 1
debug = 2
debug-assertions = false
opt-level = 's'
overflow-checks = false

[profile.release.package.sim-m5cores3]
codegen-units = 1
debug = 2
debug-assertions = false
opt-level = 's'
overflow-checks = false

[profile.release.package.sim-wasm]
codegen-units = 1
opt-level = 's'
strip = true
