[package]
name = "ossm"
version = "0.1.0"
edition = "2024"

[dependencies]
rsruckig = { version = "2.1.3", default-features = false, features = [
    "libm",
    "alloc",
] }
embassy-sync = { version = "0.7", default-features = false }
embassy-time = { version = "0.5", default-features = false }
embedded-hal = "1.0"
heapless = "0.9.2"
log = "0.4"
