[package]
name = "ossm"
version = "0.1.0"
edition = "2024"

[dependencies]
rsruckig = { version = "2.1.3", default-features = false, features = [
    "libm",
    "alloc",
] }
embassy-sync = { version = "0.7", default-features = false }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.7.1"
heapless = "0.9.2"
log = "0.4"
rmodbus = { version = "0.12.2", default-features = false, features = ["heapless"] }
crc = { version = "3", default-features = false }
