[package]
name = "ossm-alt-board"
version = "0.1.0"
edition = "2024"

[dependencies]
ossm = { path = "../../ossm" }
m57aim = { path = "../../drivers/m57aim", package = "m57aim-motor" }
embedded-io = "0.7.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
heapless = "0.9.2"
rmodbus = { version = "0.12.2", default-features = false, features = ["heapless"] }
crc = { version = "3", default-features = false }
