[package]
name = "m57aim-motor"
version = "0.1.0"
edition = "2024"

[dependencies]
ossm = { path = "../../ossm" }
embedded-io = "0.7.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
heapless = "0.9.2"
rmodbus = { version = "0.12.2", default-features = false, features = [
    "heapless",
] }
log = "0.4"
crc = { version = "3", default-features = false }
