[package]
name = "ossm-alt-m57aim"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[features]
default = ["esp32s3"]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-radio/esp32s3",
    "ossm-m5-remote/esp32s3",
]

[dependencies]
ossm = { path = "../../ossm" }
pattern-engine = { path = "../../features/pattern-engine" }
m57aim-motor = { path = "../../drivers/m57aim" }
ossm-alt-board = { path = "../../boards/ossm-alt" }
ossm-m5-remote = { path = "../../features/ossm-m5-remote" }

esp-hal = { version = "~1.0", features = ["log-04", "unstable"] }

esp-radio = { version = "0.17.0", default-features = false, features = [
    "esp-now",
    "log-04",
    "unstable",
    "wifi",
] }

esp-rtos = { version = "0.2.0", features = [
    "log-04",
    "embassy",
    "esp-alloc",
    "esp-radio",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04"] }

log = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = { version = "0.9.0" }
esp-backtrace = { version = "0.18.1", features = ["println", "panic-handler"] }
esp-println = { version = "0.16.1", features = ["log-04"] }

embassy-futures = "0.1"
embassy-sync = "0.7"

critical-section = "1.2.0"
portable-atomic = { version = "1", default-features = false }
static_cell = "2.1.1"
