[package]
name = "sim-m5cores3"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
ossm = { path = "../../ossm" }
pattern-engine = { path = "../../features/pattern-engine" }
sim-motor = { path = "../../drivers/sim-motor" }
sim-m5cores3-board = { path = "../../boards/sim-m5cores3" }

esp-hal = { version = "~1.0", features = ["log-04", "esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "log-04",
    "embassy",
    "esp-alloc",
    "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04", "esp32s3"] }

log = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1"
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = { version = "0.9.0" }
esp-backtrace = { version = "0.18.1", features = [
    "println",
    "esp32s3",
    "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }

embassy-sync = "0.7.2"
static_cell = "2"
critical-section = "1.2.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
