[package]
name = "sim-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sossm = { path = "../../sossm" }
sim-motor = { path = "../../drivers/sim-motor" }
pattern-engine = { path = "../../features/pattern-engine" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
embassy-time = { version = "0.5.0", features = ["wasm", "generic-queue-32"] }
critical-section = { version = "1.2", features = ["std"] }
